# streamvault

./: .gitignore  README.md  Thumbs.db  build-clean-catalog.js  channels.json  check-all-roots.js  detail-cache.json  episode-title-cache.json  fast-start.js  ftp_scanner.py  home-feed.json  infra-telemetry.js  make-integration-list.js  master-js-only-cleanup-report.txt  migrate-json-to-sql.js  organize-files.js  package-lock.json  package.json  poster-cache.json  rejected-media.json  scan-media-catalogs.js  section-cache.json  server.js  streamvault-haskell-backend.cabal
.github/workflows/: playback-shadow-ci.yml
app/: CatalogApi.hs  CryptoHashCompat.hs  Main.hs
data/rejected/: rejected-media.json
docs/: live-relay-v2.md
hostinger/: .htaccess  FRONTEND_DEPLOYMENT.md  app-test.js  app-v3.js  app.js  audio-before-playback-v13.js  audio-language-default-v12.js  boot-search-index.json  boot.js  build-player-ui-assets.js  build-static-data.js  capture-home-snapshot.js  channels.json  details-exact-v4.js  details-exact-v5.js  details.js  disclaimer.html  downloads.js  fifa-fast.js  frontend-server.js  home-snapshot-76d0639-20260717.js  home.js  hostinger-detail-page-restore.js  hostinger-home-fix.js  hostinger-poster-fix.js  hostinger-series-detail-fix.js  index.html  instant-hls-v24.js  instant-remux-v23.js  legal.css  legal.html  live-fast.js  manifest.webmanifest  media-popup-polish-v8.js  modal-hd-artwork-v1.css  modal-hd-artwork-v2.css  movie-play-button-v10.js  offline-ui.js  package-lock.json  package.json  (+19 more)
lib/: audio-language.js  catalog-cleaner.js  catalog-dedupe.js  catalog-index.js  download-platform.js  frontend-player-ui.js  home-sections.js  live-relay-v2.js  media-validator.js  normalize-title.js  rejected-media.js  software-db.js  software-library.js  software-metadata.js  tmdb-verify.js
middleware/: tracker.js
public/: Thumbs.db  app.js  boot.js  copyright.html  details-exact-v3.js  details.js  fifa-fast.js  frontend-playback-session.js  home-feed.json  home.js  index.html  live-fast.js  livetv.js  movies-page-fix.js  perf-overrides.js  player.js  search.js  series-page-fix.js  shadow-api-mode.js  styles.css  sw-20260714-v4.js  sw-20260722-v6.js  sw.js
routes/: dashboard.js  inactive-playback-route-flags.js  inactive-playback-route-haskell.js
scripts/: build-software-library.js  live-relay-v2-soak.js  validate-compat-av-sync.js  verify-software-posters.js
scripts/crawlers/: crawl-media.js  deep-media-crawler.js  discover-bloggerbd-ftp.js  ftp-scan.js  (+7 more)
test/: live-relay-v2-boundary.test.js  live-relay-v2.test.js  startup-readiness.test.js
tests/: audio-language.test.js  audio-playback-regression.test.js  frontend-playback-session.test.js  media-modal-ui.test.js  modal-hd-artwork-v2.test.js  player-loading-encoding.test.js  runtime-handler-paths.test.js
tools/: haskell-migration-resume-note.txt
(+675 files in other folders)
