cabal-version:      3.0
name:               streamvault-haskell-backend
version:            0.1.0.0
build-type:         Simple

executable streamvault-haskell-backend
  main-is:          Main.hs
  hs-source-dirs:   app
  other-modules:
      CatalogApi
    , CryptoHashCompat
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.14 && <5
    , warp
    , aeson
    , bytestring
    , case-insensitive
    , containers
    , directory
    , filepath
    , http-client
    , http-client-tls
    , network
    , process
    , scotty >=0.22 && <0.23
    , text
    , time
    , unordered-containers
    , vector
    , wai
    , wai-app-static
    , wai-cors
    , wai-extra

executable streamvault-warp-health
  main-is:          HealthOnly.hs
  hs-source-dirs:   tools/haskell-warp-health
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.14 && <5
    , bytestring
    , network
    , warp
    , wai


executable details-parity-native
  main-is: NativeCachedDetails.hs
  hs-source-dirs: tools/details-parity-v1
  default-language: Haskell2010
  ghc-options: -O0
  build-depends:
      base >=4.17 && <5
    , aeson
    , bytestring
    , text
    , vector
    , scientific
    , directory

executable details-shadow-native
  main-is: DetailsShadowNative.hs
  hs-source-dirs: tools/details-parity-v1
  default-language: Haskell2010
  ghc-options: -O0
  build-depends:
      base >=4.17 && <5
    , aeson
    , bytestring
    , network
    , text
    , vector


