cabal-version:      3.0
name:               streamvault-haskell-backend
version:            0.1.0.0
build-type:         Simple

executable streamvault-haskell-backend
  main-is:          Main.hs
  hs-source-dirs:   app
  other-modules:
      CatalogApi
    , CryptoHashCompat
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.14 && <5
    , warp
    , aeson
    , bytestring
    , case-insensitive
    , containers
    , directory
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , network
    , process
    , scotty >=0.22 && <0.23
    , text
    , time
    , unordered-containers
    , vector
    , wai
    , wai-app-static
    , wai-cors
    , wai-extra

executable streamvault-warp-health
  main-is:          HealthOnly.hs
  hs-source-dirs:   tools/haskell-warp-health
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.14 && <5
    , bytestring
    , http-types
    , network
    , warp
    , wai

